added examples of methods